# promprint-database

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
promprint/: asgi.py  settings.py  urls.py  wsgi.py
stationers/: admin.py  apps.py  models.py  urls.py  views.py
stationers/migrations/: 0001_initial.py  0002_remove_entry_register_line_entry_entry_edition_and_more.py
stationers/templates/stationers/: associated_library_entry_list.html  entry_list.html  index.html  match_list.html  register_detail.html
templates/admin/: base_site.html
