[project]
name = "promprint-database"
version = "0.2.0"
description = "A django-based front end for editing and interacting with the promprint database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-import-export>=4.3.9",
    "gunicorn>=23.0.0",
    "load-dotenv>=0.1.0",
    "thefuzz>=0.22.1",
]
